# Symbol_TDD

./: .gitignore  .pre-commit-config.yaml  Experiment.ipynb  LICENCE  README.md  README_old.md  SymTDD_experiment.ipynb  Test.ipynb  Test_Binary.ipynb  Test_Binary2.ipynb  Test_dynamic.ipynb  Test_line_cobine.ipynb  Test_normal_form.ipynb  Test_normal_form_v2.ipynb  TrDD_experiment.ipynb  environment.yml  global_norm.ipynb  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_dev.ipynb  test_dev2.ipynb  test_exp.ipynb  test_supp.ipynb  test_warp_mul.ipynb
.github/actions/python-check-env/: action.yml
.github/actions/python-poetry-env/: action.yml
.github/actions/python-test-env/: action.yml
.github/workflows/: test.yml
Benchmarks/: PEE_10.qasm  PEE_3.qasm  PEE_4.qasm  PEE_5.qasm  PEE_6.qasm  PEE_7.qasm  PEE_8.qasm  PEE_9.qasm  iqft_2.qasm  iqft_3.qasm  iqft_4.qasm  iqft_5.qasm  qft_3.qasm
TDD/: TDD.py  TDD2.py  TDD_Q.py  TDD_Q2.py  TN.py  TN2.py  benchmark.py  normal_form.py  normal_form_v2.py  simlation.py
TDD/Exp/: EXP.py
TDD/SymTDD/: BDD.py
TDD/TrDD/: BDD.py
TDD2/: BDD.py  BMD.py  BMD2.py  TDD.py  TDD_Q.py  TN.py
docs/: api_docs.md
src/symtdd/: __init__.py  base.py  defs.py  tdd.py  tn.py  ts.py
src/symtdd/io/: qiskit_import.py
src/symtdd/utils/: basic.py  hashing.py
tests/: test_hashing.py  test_simple.py
