[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "symtdd"
description = "Decision Diagram"
authors = [
    {name = "UTSHHMTK"},
]

readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dynamic = ["version"]
requires-python = ">=3.8"

[tool.setuptools.dynamic]
version = {attr = "symtdd.VERSION"}

[tool.isort]
profile = "black"
skip_glob = [".*", "TDD"]

[tool.black]
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov symtdd \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
exclude = ["^TDD*"]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
