[options]
# Since github workflow is slow to install dependencies,
# we need to add cache to the flow (TODO).
# Now we temporary neglect handling dependencies.
install_requires =
    # qiskit[visualization] ~= 0.42
    # quimb ~= 1.4
    # cotengra @ git+https://github.com/jcmgray/cotengra.git

[options.extras_require]
# `pip install -e ".[doc,dev]"`
# use `pip install -e ".[doc]"` to generate doc
doc =
    mkdocstrings[python] >=0.18
    mkdocs-material
    pymdown-extensions
# use `pip install -e ".[dev]"` to develop
# written down here for convenient, but we prefer using `requirements-dev.txt`.
dev =
    autoflake
    black
    flake8
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-debugger
    flake8-eradicate
    flake8-logging-format
    isort
    mypy
    pep8-naming
    pre-commit
    pytest
    pytest-github-actions-annotate-failures
    pytest-cov
    python-kacl
    pyupgrade
    tryceratops

[options.packages.find]
where = src

[flake8]
ignore =
    # Line break occurred before a binary operator (W503)
    # https://github.com/psf/black/issues/52
    W503,
    # Line too long (E501)
    # 1. black does not format comments
    #    https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#comments
    # 2. long links in doc strings are an issue
    E501
    # flake8-builtins
    # the likelihood of running into an issue when shadowing a buildin
    # with a class attribute is very low
    A003,
    # flake8-bugbear
    # fastapi recommends to use `Depend()` as an argument default.
    # Unfortunately, exceptions are hardcoded in bugbear.
    # https://github.com/PyCQA/flake8-bugbear/issues/62
    B008,

# pep8-naming
classmethod-decorators =
  classmethod,  # built-in
  validator,  # pydantic
  root_validator,  # pydantic

enable-extensions=
    G,  # flake8-logging-format

per-file-ignores =
    # star imports in `__init__.py` files are ok
    */__init__.py: F401

# Enables maccabe complexity checks
#   see https://github.com/PyCQA/mccabe#plugin-for-flake8
max-complexity = 10

exclude = .git,__pycache__,old,build,dist,.venv,.eggs,.tox
